# 1833-scoutrust

./: Cargo.toml  Dioxus.toml  README.md
assets/: tailwind.css
assets/config/: autonConfig.json  postmatchConfig.json  prematchConfig.json  teleopConfig.json
assets/styling/: counter.css  dropdown.css  home.css  input.css  main.css  match.css  pre.css  prematch.css  teleop.css  toggle.css
assets/styling/components/: counter.css  dropdown.css  input.css  toggle.css
assets/styling/views/: confirmation.css  home.css  match.css  qr.css
src/: main.rs
src/backend/: fb.rs  mod.rs  qr.rs
src/components/: counter.rs  dropdown.rs  input.rs  mod.rs  module.rs  qrcodecomponent.rs  toggle.rs
src/config/: autonConfig.json  auton_config.ron  data.rs  postmatchConfig.json  postmatch_config.ron  prematchConfig.json  prematch_config.ron  teleopConfig.json  teleop_config.ron
src/views/: auton.rs  confirmation.rs  home.rs  mod.rs  postmatch.rs  prematch.rs  qr.rs  teleop.rs
