[package]
name = "scoutrust"
version = "0.1.0"
authors = ["nekhilsaxena <nekhil.saxena@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.0-alpha.3", features = ["router", "fullstack"] }
firebase-rs = "2.2.2"
indexmap = {version = "2.11.4", features = ["serde"]}
once_cell = "1.21.3"
qrcode = "0.14.1"
serde = "1.0.226"
serde_json = "1.0.145"

[features]
default = ["mobile"]
# The feature that are only required for the web = ["dioxus/web"] build target should be optional and only enabled in the web = ["dioxus/web"] feature
web = ["dioxus/web"]
# The feature that are only required for the desktop = ["dioxus/desktop"] build target should be optional and only enabled in the desktop = ["dioxus/desktop"] feature
desktop = ["dioxus/desktop"]
# The feature that are only required for the mobile = ["dioxus/mobile"] build target should be optional and only enabled in the mobile = ["dioxus/mobile"] feature
mobile = ["dioxus/mobile"]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
