[package]
name = "scoutrust"
version = "0.1.0"
authors = ["nekhilsaxena <nekhil.saxena@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.0", features = ["router"] }
dioxus-native = "0.7.0-rc.0"
firebase-rs = "2.2.2"
indexmap = {version = "2.11.4", features = ["serde"]}
once_cell = "1.21.3"
qrcode = "0.14.1"
serde = "1.0.226"
serde_json = "1.0.145"
[target.'cfg(target_os = "android")'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

[features]
default = ["mobile"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
